# gsa-mcp

./: .gitignore  README.md  pyproject.toml
scripts/: smoke_windows.py
src/gsa_mcp/: __init__.py  com_client.py  errors.py  server.py  validation.py
src/gsa_mcp/tools/: __init__.py  common.py  core.py  data.py  gwa.py  output.py  view.py
tests/: test_tools_core.py  test_tools_output.py
