[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "gsa-mcp"
version = "0.1.0"
description = "MCP server for Oasys GSA COM automation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.9.0",
  "pydantic>=2.7.0",
  "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
gsa-mcp = "gsa_mcp.server:main"

[dependency-groups]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
